fix: restore printed pawn images by removing overlapping container background

--- a/src/main.scss
+++ b/src/main.scss
@@ -415,7 +415,6 @@ html {
       position: relative;
       page-break-inside: avoid;
       margin: 0;
-      background: white;
 
       .pawn-wrapper {
         position: relative;
